Refatorar criação de DTOs
